# boto-education

./: README.md  pyproject.toml  short_url.db
app/: __init__.py  db.py  logger.py  main.py  models.py
tests/: test_api.py
